[dm] fixed learn more heading not centering on IE 11

--- a/src/assets/stylesheets/home.pcss
+++ b/src/assets/stylesheets/home.pcss
@@ -194,6 +194,7 @@
   justify-content: center;
 
   & .heading {
+    width: 100%;
     margin-bottom: 50px;
   }
 }
